게시글목록보기,페이징,lazy,eager

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,10 @@ server:
       force: true
   port: 8080
 spring:
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
+      
   mustache:
     servlet:
       expose-session-attributes: true
